--- a/README
+++ b/README
@@ -6,9 +6,12 @@ Compile the java classes (requires <a href="http://www.oracle.com/technetwork/ja
 1) cd to java/src
 2) javac timo/home/polyencode/PolyEncode.java
 3) javac timo/home/seriesreducer/RDPReducer.java
+4) javac timo/home/elevations/ElevationRequest.java
 
 Obtain a google static maps api key, and save it to a file named 'mapsKey.txt' in the root folder of the project (i.e. the folder with visualiseGPS.m). Just follow the procedure outlined on the google static maps webpage to obtain one.
+Obtain a google elevations api key, and save it to a file named 'elevationsKey.txt' in the root folder of the project (i.e. the folder with visualiseGPS.m). Just follow the procedure outlined on the google elevations api webpage to obtain one.
+
 
 Add some GPS log files into sampleData/gpsLog folder. I have included a sample file, which should show a route in the Melbourne Metropolitan area from Blackburn to Burwood. Will create a folder 'mapFigs' and save corresponding Google Static Maps as .png files.
 
-Uses Apache 2.0 license code I downloaded from google Github (polyencode for encoding GPS coordinates into Google Maps-compatible format) and Lukasz Wiktor's <a href="https://github.com/LukaszWiktor/series-reducer">series-reducer library</a>, which is licensed with Apache 2.0 license for Ramer–Douglas–Peucker series reduction of the GPS coordinates. Those licensing terms apply to this derivative work.
+Uses Apache 2.0 license code I downloaded from google Github (polyencode for encoding GPS coordinates into Google Maps-compatible format, and Json parsing) and Lukasz Wiktor's <a href="https://github.com/LukaszWiktor/series-reducer">series-reducer library</a>, which is licensed with Apache 2.0 license for Ramer–Douglas–Peucker series reduction of the GPS coordinates. Those licensing terms apply to this derivative work, and any code I have added is released to the public domain unless otherwise mandated by the other licensing.
